--- a/package.json
+++ b/package.json
@@ -1,45 +1,49 @@
 {
-  "name": "apple-website",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "check-format": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
-  },
-  "dependencies": {
-    "@gsap/react": "^2.1.1",
-    "@react-three/drei": "^9.109.2",
-    "@react-three/fiber": "^8.16.8",
-    "@sentry/react": "^8.20.0",
-    "@sentry/replay": "^7.116.0",
-    "@sentry/tracing": "^7.114.0",
-    "@sentry/vite-plugin": "^2.21.1",
-    "gsap": "^3.12.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
-    "three": "^0.167.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "postcss": "^8.4.40",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.7",
-    "vite": "^5.3.4"
-  }
+	"name": "apple-website",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"homepage": "https://AhmedAnbar.github.io/iPhoneclone",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+		"check-format": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"dependencies": {
+		"@gsap/react": "^2.1.1",
+		"@react-three/drei": "^9.109.2",
+		"@react-three/fiber": "^8.16.8",
+		"@sentry/react": "^8.20.0",
+		"@sentry/replay": "^7.116.0",
+		"@sentry/tracing": "^7.114.0",
+		"@sentry/vite-plugin": "^2.21.1",
+		"gsap": "^3.12.5",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.25.1",
+		"three": "^0.167.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-react": "^7.34.3",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
+		"eslint-plugin-tailwindcss": "^3.17.4",
+		"gh-pages": "^6.1.1",
+		"postcss": "^8.4.40",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.7",
+		"vite": "^5.3.4"
+	}
 }
